@@ -6,6 +6,8 @@ package me.lokka30.levelledmobs.commands.subcommands;
 
 import me.lokka30.levelledmobs.LevelledMobs;
 import me.lokka30.levelledmobs.misc.Utils;
+import me.lokka30.levelledmobs.rules.DoNotMerge;
+import me.lokka30.microlib.MessageUtils;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.command.CommandSender;
@@ -35,8 +37,9 @@ public class SpawnerSubCommand implements Subcommand{
 
     final private LevelledMobs main;
     final private List<String> allSpawnerOptions = Arrays.asList(
-            "/name", "/customdropid", "/spawntype", "/minlevel", "/maxlevel", "/delay", "/maxnearbyentities",
-            "/minspawndelay", "/maxspawndelay", "/requiredplayerrange", "/spawncount", "/spawnrange"
+            "/name", "/customdropid", "/spawntype", "/giveplayer", "/lore", "/minlevel", "/maxlevel", "/delay",
+            "/maxnearbyentities", "/minspawndelay", "/maxspawndelay", "/requiredplayerrange",
+            "/spawncount", "/spawnrange", "/nolore"
     );
     private boolean hadInvalidArg;
 
@@ -47,17 +50,39 @@ public class SpawnerSubCommand implements Subcommand{
             return;
         }
 
-        if (!(sender instanceof Player)){
-            sender.sendMessage("Command can only be run by a player");
-            return;
-        }
-
         if (args.length < 2){
             List<String> messages = main.messagesCfg.getStringList("command.levelledmobs.spawner.usage");
             messages = Utils.replaceAllInList(messages, "%prefix%", main.configUtils.getPrefix());
             messages = Utils.replaceAllInList(messages, "%label%", label);
             messages = Utils.colorizeAllInList(messages);
             messages.forEach(sender::sendMessage);
+            return;
+        }
+
+        OperationEnum operationEnum = OperationEnum.CREATE;
+
+        switch (args[1].toLowerCase()){
+            case "copy":
+                operationEnum = OperationEnum.COPY;
+                break;
+            case "info":
+                operationEnum = OperationEnum.INFO;
+                break;
+        }
+
+        boolean hasGivePlayer = false;
+        for (int i = 2; i < args.length; i++){
+            if ("/giveplayer".equalsIgnoreCase(args[i])){
+                hasGivePlayer = true;
+                break;
+            }
+        }
+
+        if ((!hasGivePlayer || operationEnum != OperationEnum.CREATE) && !(sender instanceof Player)){
+            if (operationEnum == OperationEnum.CREATE)
+                sender.sendMessage("Command can only be run by a player unless /giveplayer is specified");
+            else
+                sender.sendMessage("Command can only be run by a player");
             return;
         }
 
@@ -186,10 +211,21 @@ public class SpawnerSubCommand implements Subcommand{
     private void parseCreateCommand(@NotNull final CommandSender sender, final String label, final String[] args){
         hadInvalidArg = false;
 
-        final CustomSpawnerInfo info = new CustomSpawnerInfo(main, (Player) sender, label);
+        final CustomSpawnerInfo info = new CustomSpawnerInfo(main, label);
+        if (sender instanceof Player)
+            info.player = (Player) sender;
 
-        for (int i = 0; i < allSpawnerOptions.size(); i++){
-            final boolean mustBeANumber = (i > 2);
+        // arguments with no values go here:
+        for (int i = 1; i < args.length; i++) {
+            final String arg = args[i];
+            if ("/nolore".equalsIgnoreCase(arg)) {
+                info.noLore = true;
+                break;
+            }
+        }
+
+        for (int i = 0; i < allSpawnerOptions.size() - 1; i++){
+            final boolean mustBeANumber = (i > 4);
             final String command = allSpawnerOptions.get(i);
             final String foundValue = getArgValue(command, args, sender, label, mustBeANumber);
             if (hadInvalidArg) return;
@@ -198,6 +234,7 @@ public class SpawnerSubCommand implements Subcommand{
             switch (command){
                 case "/name": info.customName = foundValue; break;
                 case "/customdropid": info.customDropId = foundValue; break;
+                case "/lore": info.customLore = foundValue; break;
                 case "/spawntype":
                     try{
                         info.spawnType = EntityType.valueOf(foundValue.toUpperCase());
@@ -216,6 +253,21 @@ public class SpawnerSubCommand implements Subcommand{
                 case "/requiredplayerrange": info.requiredPlayerRange = Integer.parseInt(foundValue); break;
                 case "/spawncount": info.spawnCount = Integer.parseInt(foundValue); break;
                 case "/spawnrange": info.spawnRange = Integer.parseInt(foundValue); break;
+                case "/giveplayer":
+                    if (Utils.isNullOrEmpty(foundValue)){
+                        sender.sendMessage("No player was specified");
+                        return;
+                    }
+                    try { info.player = Bukkit.getPlayer(foundValue); }
+                    catch (Exception e){
+                        sender.sendMessage("Invalid or offline player: " + foundValue);
+                        return;
+                    }
+                    if (info.player == null){
+                        sender.sendMessage("Invalid or offline player: " + foundValue);
+                        return;
+                    }
+                    break;
             }
         }
 
@@ -225,6 +277,11 @@ public class SpawnerSubCommand implements Subcommand{
             messages = Utils.replaceAllInList(messages, "%label%", label);
             messages = Utils.colorizeAllInList(messages);
             messages.forEach(sender::sendMessage);
+            return;
+        }
+
+        if (info.player == null){
+            sender.sendMessage("No player was specified");
             return;
         }
 
@@ -243,8 +300,10 @@ public class SpawnerSubCommand implements Subcommand{
                 keyFlag = i;
             else if (keyFlag == i - 1 && arg.startsWith("\""))
                 nameStartFlag = i;
-            else if (nameStartFlag > -1 && !arg.startsWith("/") && arg.endsWith("\""))
+            else if (nameStartFlag > -1 && !arg.startsWith("/") && arg.endsWith("\"")) {
                 nameEndFlag = i;
+                break;
+            }
         }
 
         if (keyFlag < 0) return null;
@@ -302,6 +361,8 @@ public class SpawnerSubCommand implements Subcommand{
             info.maxSpawnDelay = info.minSpawnDelay;
         }
 
+        if (info.customName != null) info.customName = MessageUtils.colorizeAll(info.customName);
+
         final ItemStack item = new ItemStack(Material.SPAWNER);
         final ItemMeta meta = item.getItemMeta();
         if (meta != null){
@@ -315,8 +376,7 @@ public class SpawnerSubCommand implements Subcommand{
                     if (!Modifier.isPublic(f.getModifiers())) continue;
                     if (f.get(info) == null) continue;
                     final String name = f.getName();
-                    if (name.equals("player") || name.equals("label") || name.equals("customName") || name.equals("main"))
-                        continue;
+                    if (f.isAnnotationPresent(DoNotMerge.class)) continue;
 
                     if ("-1".equals(f.get(info).toString()) && (name.equals("minLevel") || name.equals("maxLevel")))
                         continue;
@@ -338,7 +398,7 @@ public class SpawnerSubCommand implements Subcommand{
                 e.printStackTrace();
             }
 
-            if (info.lore == null) {
+            if (!info.noLore && info.lore == null && info.customLore == null) {
                 lore = Utils.colorizeAllInList(lore);
                 meta.setLore(lore);
 
@@ -349,11 +409,14 @@ public class SpawnerSubCommand implements Subcommand{
                 }
                 meta.getPersistentDataContainer().set(info.main.namespaced_keys.keySpawner_Lore, PersistentDataType.STRING, sbLore.toString());
             }
-            else {
+            else if (!info.noLore || info.customLore != null){
+                final String useLore = info.customLore == null ?
+                        info.lore : MessageUtils.colorizeAll(info.customLore).replace("\\n", "\n");
+
                 lore.clear();
-                lore.addAll(Arrays.asList(info.lore.split("\n")));
+                lore.addAll(List.of(useLore.split("\n")));
                 meta.setLore(lore);
-                meta.getPersistentDataContainer().set(info.main.namespaced_keys.keySpawner_Lore, PersistentDataType.STRING, info.lore);
+                meta.getPersistentDataContainer().set(info.main.namespaced_keys.keySpawner_Lore, PersistentDataType.STRING, useLore);
             }
 
             meta.getPersistentDataContainer().set(info.main.namespaced_keys.keySpawner, PersistentDataType.INTEGER, 1);
@@ -460,6 +523,12 @@ public class SpawnerSubCommand implements Subcommand{
                 case "/spawncount":
                 case "/spawnrange":
                     return Collections.singletonList("4");
+                case "/giveplayer":
+                    final List<String> players = new LinkedList<>();
+                    for (final Player player : Bukkit.getOnlinePlayers())
+                        players.add(player.getName());
+                    players.sort(String.CASE_INSENSITIVE_ORDER);
+                    return players;
             }
         }
 
@@ -482,7 +551,7 @@ public class SpawnerSubCommand implements Subcommand{
         final String lastArg = args[args.length - 1];
 
         if (inQuotes || lastArg.length() > 0 && lastArg.charAt(lastArg.length() - 1) == '\"')
-            return Collections.singletonList("");
+            return Collections.emptyList();
 
         final List<String> result = new ArrayList<>(commandsList.size());
         result.addAll(commandsList);
@@ -490,20 +559,24 @@ public class SpawnerSubCommand implements Subcommand{
     }
 
     public static class CustomSpawnerInfo{
-        public CustomSpawnerInfo(final LevelledMobs main, final Player player, final String label){
+        public CustomSpawnerInfo(final LevelledMobs main, final String label){
             this.main = main;
-            this.player = player;
             this.label = label;
             this.minLevel = -1;
             this.maxLevel = -1;
             this.spawnType = EntityType.UNKNOWN;
         }
 
+        @DoNotMerge
         final public LevelledMobs main;
-        final public Player player;
+        @DoNotMerge
         final public String label;
+        @DoNotMerge
+        public Player player;
         public int minLevel;
         public int maxLevel;
+        @DoNotMerge
+        public boolean noLore;
         public Integer delay;
         public Integer maxNearbyEntities;
         public Integer minSpawnDelay;
@@ -512,8 +585,17 @@ public class SpawnerSubCommand implements Subcommand{
         public Integer spawnCount;
         public Integer spawnRange;
         public String customDropId;
+        @DoNotMerge
         public String customName;
         public EntityType spawnType;
+        @DoNotMerge
+        public String customLore;
         public String lore;
+    }
+
+    private enum OperationEnum{
+        CREATE,
+        COPY,
+        INFO
     }
 }
